Bug 96447 - FORMATTING : Border display in format cells dialog is incorrect when multiple ranges are selected
Summary: FORMATTING : Border display in format cells dialog is incorrect when multiple...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Dennis Francis
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-12 17:26 UTC by Dennis Francis
Modified: 2016-10-25 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document that reproduces the issue (7.23 KB, application/x-vnd.oasis.opendocument.spreadsheet)
2015-12-12 17:26 UTC, Dennis Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Francis 2015-12-12 17:26:22 UTC
Created attachment 121247 [details]
Sample document that reproduces the issue

How to reproduce ?

1. Open the attached document in Calc.
2. Select the range C9:D12 using mouse.
3. Select the range G9:H12 using mouse by holding CTRL key so that now you have
   two areas selected simultaneously. Notice that both areas have black outer
   borders.
4. Open Format Cells dialog while the selection is intact.
5. In the format cells dialog go to Borders tab.

What is current behavior ?

The user-defined border editor under "Line Arrangement" section shows
no borders for the current selection.
The sidebar border editor also has similar behavior.

What is the expected behavior ?

The user-defined border editor should show the outer borders as both the
selected areas have outer borders.
Comment 1 A (Andy) 2015-12-12 20:25:39 UTC
Reproducible with LO 5.0.3.2, Win 8.1
Comment 2 Commit Notification 2015-12-14 22:12:09 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e0d2acfa65d81da323cbe91e6451fca70e00bdd5

tdf#96447 : Show correct borders in border editor when multimarked

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.