tdf#96447 : Show correct borders in border editor when multimarked

Change-Id: Icfa10e1662f6ac00110a8d301734a72dcacc1780